--- a/analysis/analysis.ipynb
+++ b/analysis/analysis.ipynb
@@ -22,7 +22,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "PG_CONN = \"postgresql://postgres:enbkm134@fbamazon1.chmkw5prnhny.eu-central-1.rds.amazonaws.com:5432/postgres\""
+    "PG_CONN = \"postgresql:\""
    ],
    "metadata": {
     "collapsed": false,
